Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Show border around responses, like in the original layout.
  [maurits]

- Check that the changes within a response are allowed (new severity
  in available_severities, etc).
  [maurits]

- Make difference between available_transitions and
  transitions_for_display; also for the other response options.
  [maurits]

- Add methods sorted_keys/values/items for the ResponseContainer.
  Show the sorted items in the view (so 1, ..., 9, 10 instead of 1,
  10, ..., 9).
  [maurits]

- Store OOBTree and total in a PersistentMapping instead of only the
  OOBTree directly in the annotations.
  [maurits]

- Check radio buttons of response based on current status for all
  options.  Rename options to be in line with the fields of the parent
  Task.
  [maurits]

- Store creator and creation date of response.
  [maurits]

- Use an OOBtree instead of a PersistentMapping to store the
  responses.
  [maurits]

- Use zope.app.container.sample.SampleContainer as base class for
  ResponseContainer.  Store a PersistentMapping in it.  Show the
  sorted responses.
  [maurits]

- Start creating zope 3 style lightweight responses instead of big fat
  Archetypes objects.
  [maurits]

- Add provider:poi.response.add that gives you a form for adding a
  response when viewing an issue.
  [maurits]

- Add browser view @@create_response that creates a response in the
  current issue, based on the request form.
  [maurits]


Poi 1.2 - (Unreleased)
----------------------

- Use event handlers for keeping the SearchableText of an issue in
  sync with its responses.  This comes in place of the updateResponses
  method of an issue that was called by poi_response_update_issue.cpy.
  [maurits]

- Eggification: Poi/trunk has been moved to
  Products.Poi/trunk/Products/Poi
  [maurits]

- Modernization of trackers:
