@@ -8,6 +8,9 @@ OPTIONFLAGS = (doctest.ELLIPSIS |
 
 def test_suite():
     return unittest.TestSuite([
+        doctestunit.DocFileSuite('responses.txt',
+                                 package='Products.Poi.tests',
+                                 optionflags=OPTIONFLAGS),
         doctestunit.DocFileSuite('linkdetection.txt',
                                  package='Products.Poi.tests',
                                  optionflags=OPTIONFLAGS),
